fix: CreateStore modal behind some elements

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3374,9 +3374,6 @@ details.collapse summary::-webkit-details-marker {
 .z-20 {
   z-index: 20;
 }
-.z-30 {
-  z-index: 30;
-}
 .z-40 {
   z-index: 40;
 }
